# cephes

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE.txt  License-request-email.txt  README.md
.github/workflows/: build.yml  coverage.yml
cephes/: CMakeLists.txt  torch_mtherr.c
cephes/bessel/: airy.c  hyp2f1.c  hyperg.c  i0.c  i1.c  iv.c  j0.c  j1.c  jn.c  jv.c  k0.c  k1.c  kn.c  mconf.h  psi.c  struve.c  yn.c
cephes/cmath/: acosh.c  asin.c  asinh.c  atan.c  atanh.c  cbrt.c  chbevl.c  clog.c  cmplx.c  const.c  cosh.c  descrip.mms  dtestvec.c  exp.c  exp10.c  exp2.c  fabs.c  floor.c  log.c  log10.c  log2.c  mod2pi.c  mtst.c  pow.c  powi.c  protos.h  round.c  setprec.688  sin.c  sincos.c  sindg.c  sinh.c  sqrt.c  tan.c  tandg.c  tanh.c  unix.mak
cephes/cprob/: bdtr.c  btdtr.c  chdtr.c  drand.c  expx2.c  fdtr.c  gamma.c  gdtr.c  igam.c  igami.c  incbet.c  incbi.c  kolmogorov.c  mconf.h  nbdtr.c  ndtr.c  ndtri.c  pdtr.c  stdtr.c  unity.c
cephes/ellf/: borland.mak  ellf.c  ellf.que  ellie.c  ellik.c  ellpe.c  ellpj.c  ellpk.c  mconf.h  msvc6.mak  polevl.c  protos.h
cephes/luasrc/: error_handling.lua
cephes/misc/: beta.c  dawsn.c  ei.c  expn.c  fac.c  fresnl.c  planck.c  polylog.c  psi.c  rgamma.c  shichi.c  sici.c  simpsn.c  spence.c  zeta.c  zetac.c
cephes/planck/: exp.c  fac.c  floor.c  gamma.c  isnan.c  log.c  mconf.h  mtherr.c  planck.c  polylog.c  pow.c  powi.c  protos.h  rad.c  sin.c  spence.c  unity.c  zetac.c
cephes/polyn/: euclid.c  polmisc.c  polrt.c  polyn.c  polyr.c  revers.c
cephes/single/: acoshf.c  airyf.c  asinf.c  asinhf.c  atanf.c  atanhf.c  bdtrf.c  betaf.c  cbrtf.c  chbevlf.c  chdtrf.c  clogf.c  cmplxf.c  coshf.c  dawsnf.c  drand.c  ellief.c  ellikf.c  ellpef.c  ellpjf.c  ellpkf.c  exp10f.c  exp2f.c  expf.c  expnf.c  expx2f.c  f.bat  f.rsp  facf.c  fdtrf.c  floatlib.h  floatlib.mak  floorf.c  fresnlf.c  gammaf.c  gdtrf.c  hyp2f1f.c  hypergf.c  i0f.c  i1f.c  (+51 more)
doc/markdown/: bessel.md  exp_int.md  gamma.md  hyper.md  index.md  misc.md  prob.md
docs/: bessel.md  cephes.md  doubldoc.md  elliptic.md  error.md  exp_int.md  features.md  hyper.md  misc.md  prob.md
include/cephes/: bessel.h  double.h  elliptic.h  error.h  exp_int.h  gamma.h  hyper.h  misc.h  prob.h
tests/: CMakeLists.txt  Coverage.cmake  airy.cpp  exp_int.cpp
tests/bessel/: CMakeLists.txt  airy.cpp  i0.cpp  i0e.cpp  i1.cpp  i1e.cpp  iv.cpp  j0.cpp  j1.cpp  jn.cpp  jv.cpp  k0.cpp  k0e.cpp  k1.cpp  k1e.cpp  kn.cpp  psi.cpp  struve.cpp  y0.cpp  y1.cpp  yn.cpp  yv.cpp
tests/elliptic/: CMakeLists.txt  ellie.cpp  ellik.cpp  ellpe.cpp  ellpj.cpp  ellpk.cpp
tests/error/: CMakeLists.txt  dawsn.cpp  erf.cpp  erfc.cpp  fresnl.cpp  ndtr.cpp
tests/exp_int/: CMakeLists.txt  ei.cpp  expn.cpp  shichi.cpp  sici.cpp
tests/gamma/: CMakeLists.txt  beta.cpp  fac.cpp  gamma.cpp  igam.cpp  igamc.cpp  igami.cpp  incbet.cpp  incbi.cpp  lbeta.cpp  lgam.cpp  psi.cpp  rgamma.cpp
tests/hyper/: CMakeLists.txt  gen_hyp2f1_data.wls  gen_hyperg_data.wls  hyp2f1.cpp  hyp2f1_data.h  hyperg.cpp  hyperg_data.h
tests/include/: xtest.hpp
tests/misc/: CMakeLists.txt  ei.cpp  planckc.cpp  planckd.cpp  plancki.cpp  planckw.cpp  polylog.cpp  spence.cpp  struve.cpp  zeta.cpp  zetac.cpp
tests/prob/: CMakeLists.txt  bdtr.cpp  bdtrc.cpp  bdtri.cpp  btdtr.cpp  chdtr.cpp  chdtrc.cpp  chdtri.cpp  fdtr.cpp  fdtrc.cpp  fdtri.cpp  gdtr.cpp  gdtrc.cpp  kolmogi.cpp  kolmogorov.cpp  nbdtr.cpp  nbdtrc.cpp  nbdtri.cpp  ndtr.cpp  ndtri.cpp  pdtr.cpp  pdtrc.cpp  pdtri.cpp  smirnov.cpp  smirnovi.cpp  stdtr.cpp  stdtri.cpp
